<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_main2">尚尚健康</string>
    <string name="app_name">尚尚健康</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_spproduct_detail_inner">SPProductDetailInnerActivity</string>
    <string name="title_activity_spconfirm_order">SPConfirmOrderActivity</string>
    <string name="digate_1">12</string>
    <string name="tab_item_infor">资讯</string>
    <string name="tab_item_shop">健界</string>
    <string name="tab_item_community">江湖</string>
    <string name="tab_item_healthy">健康云</string>
    <string name="tab_item_my">我</string>
    <string name="text_item_category">分类</string>
    <string name="text_item_shopcatd">购物车</string>
    <string name="text_item_order">订单</string>
    <string name="text_item_coupon">优惠券</string>
    <string name="home_menu_first">限时抢购</string>
    <string name="home_menu_sec">新品</string>
    <string name="home_menu_third">推荐</string>
    <string name="home_menu_fourth">充值</string>
    <string name="product_price">¥%1$2.2f</string>
    <string name="sort_composite">综合</string>
    <string name="sort_salenum">销量</string>
    <string name="sort_price">价格</string>
    <string name="sort_filter">筛选</string>
    <string name="hint_search">请输入要搜索的商品</string>
    <string name="hint_comment">请输入评价</string>
    <string name="product_details_spec">产品规格</string>
    <string name="product_details_attr">商品属性</string>
    <string name="product_details_detail">详情</string>
    <string name="product_details_comment">累计评价</string>
    <string name="product_details_like">已收藏</string>
    <string name="product_details_unlike">未收藏</string>
    <string name="product_details_home">首页</string>
    <string name="product_add_cart">加入购物车</string>
    <string name="product_buy_now">立即购买</string>
    <string name="product_delete">删除商品</string>
    <string name="order_deliver_type">配送方式</string>
    <string name="order_coupon">代金券</string>
    <string name="order_invoice">发票抬头</string>
    <string name="order_residue_balance">当前余额</string>
    <string name="order_goods_fee">商品总额</string>
    <string name="order_shopping_fee">运费</string>
    <string name="order_amount_fee">应付金额</string>
    <string name="order_coupon_hint">请输入优惠码</string>
    <string name="toast_no_ordersn_data">无订单数据</string>
    <string name="toast_no_data">无数据</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_cod">货到付款</string>
    <string name="go_home">回首页</string>
    <string name="look_order">查看订单</string>
    <string name="person_nickname">点击此处登录</string>
    <string name="person_mine_order">我的订单</string>
    <string name="person_all_order">查看全部订单</string>
    <string name="person_order_waitpay">待付款</string>
    <string name="person_order_waitreceive">待收货</string>
    <string name="person_order_waitcomment">待评价</string>
    <string name="person_order_returned">退货</string>
    <string name="person_order_canceled">已取消</string>
    <string name="person_goods_collect">我的收藏</string>
    <string name="person_mystone">我的石头</string>
    <string name="person_mystone_recharge">充值</string>
    <string name="person_mystone_withdraw">提现</string>
    <string name="person_mystone_detail">明细</string>
    <string name="person_mystone_source">石头支付</string>
    <string name="person_mystone_date">2017-03-13 15:09:28</string>
    <string name="stonerechargeactivity_rechargestone">石头充值</string>
    <string name="stone_pay">石头支付</string>
    <string name="person_receive_address">收货地址</string>
    <string name="person_user_info">个人资料</string>
    <string name="person_integrate_detail">积分明细</string>
    <string name="person_coupon">优惠券</string>
    <string name="person_setting">设置</string>
    <string name="person_stone">石头</string>
    <string name="person_stone_explain">说明</string>
    <string name="cameralistactivity_title">我的摄像机</string>
    <string name="banklistactivity_title">我的银行卡</string>
    <string name="bankaddoreditactivity_title">银行卡</string>
    <string name="camera_add">添加摄像机</string>
    <string name="addcameraactivity_devicename">设备名称</string>
    <string name="addcameraactivity_devicestate">设备状态</string>
    <string name="addcameraactivity_deviceid">设备ID</string>
    <string name="addcameraactivity_btn_link">连接</string>
    <string name="addcameraactivity_btn_cancel">取消</string>
    <string name="addcameraactivity_btn_preview">预览模式</string>
    <string name="addcameraactivity_btn_search">局域网搜索</string>
    <string name="addcameraactivity_btn_setting_wifi">配置WiFi</string>
    <string name="cameralistactivity_nodata_hint">您还没有绑定摄像机</string>
    <string name="cameralistactivity_local_video">本地视频</string>
    <string name="camera_wifi_name">WiFi名称</string>
    <string name="camera_wifi_paw">WiFi密码</string>
    <string name="person_consignee_name">收货人:</string>
    <string name="person_consignee_name_hit">请输入收货人姓名</string>
    <string name="person_consignee_phone">手机号码:</string>
    <string name="person_consignee_phone_hit">请输入手机号码</string>
    <string name="person_consignee_district">所在地区:</string>
    <string name="person_consignee_district_hit">选择所在地区</string>
    <string name="person_consignee_street">详细地址:</string>
    <string name="person_consignee_street_hit">输入详细地址:</string>
    <string name="person_consignee_default">设置为默认收货地址</string>
    <string name="address_add">新建地址</string>
    <string name="address_save">保存</string>
    <string name="bank_add">添加银行卡</string>
    <string name="bankcard_user">持卡人:</string>
    <string name="bankcard_number">卡号:</string>
    <string name="bankcard_issuer">发卡行:</string>
    <string name="bankcard_settingdefault">设置为默认银行卡</string>
    <string name="count">购买数量</string>
    <string name="stock">库存情况</string>
    <string name="comment">评论</string>
    <string name="image_text_detail">图文详情</string>
    <string name="order_pay">去结算</string>
    <string name="coupon">优惠券</string>
    <string name="use">使用</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel2">残忍拒绝</string>
    <string name="update2">马上升级</string>
    <string name="bind">去绑定</string>
    <string name="to_login">去登录</string>
    <string name="update">更新</string>
    <string name="close">关闭本页</string>
    <string name="buy">去购买</string>
    <string name="settings">设置</string>
    <string name="exit">安全退出</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="town">镇</string>
    <string name="delete">删除</string>
    <string name="delete_history">删除历史记录</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="apply_return">申请售后</string>
    <string name="apply_comment">去评价</string>
    <string name="submit_comment">提交评论</string>
    <string name="scan">扫一扫</string>
    <string name="data_error">数据异常</string>
    <string name="toast_collect_success">成功收藏</string>
    <string name="toast_collect_cancel">取消收藏</string>
    <string name="toast_not_datal">请选择商品数量</string>
    <string name="toast_shopcart_action_success">购物车操作成功</string>
    <string name="toast_shopcart_add_success">添加购物车成功</string>
    <string name="toast_count_not_small_zero">"数量不能少于1"</string>
    <string name="toast_low_stocks">库存不足</string>
    <string name="toast_load_data">正在加载数据</string>
    <string name="toast_load_nodata">没有更多商品了</string>
    <string name="toast_person_unlogin">请先登录</string>
    <string name="toast_address_nocompletion">地址信息不完整</string>
    <string name="title_spec">规格属性</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_consignee_list">收货人地址</string>
    <string name="title_collect">收藏</string>
    <string name="title_all_collect">我的收藏</string>
    <string name="title_balance_points">积分金额明细</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_product_list">商品列表</string>
    <string name="title_pay_completed">支付完成</string>
    <string name="title_pay_list">支付列表</string>
    <string name="title_logistic">物流</string>
    <string name="title_getcontent">获取内容</string>
    <string name="title_detail">订单详情</string>
    <string name="title_exchange_list">退换货列表</string>
    <string name="title_consignee">收货地址</string>
    <string name="title_home">尚尚健康</string>
    <string name="toast_no_select_province">请先选择省份</string>
    <string name="toast_no_select_city">请先选择城市</string>
    <string name="toast_no_select_district">请先选择区县</string>
    <string name="toast_no_preview_district">请选择上级地区</string>
    <string name="toast_next_version">该版本为公测版,下版本开放该功能</string>
    <string name="login_title">登录</string>
    <string name="login_phone_number">手机号码</string>
    <string name="login_phone_number_null">请输入手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="login_password_null">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="changepwd_btn">更改密码</string>
    <string name="login_register">快速注册</string>
    <string name="login_forget_pwd">找回密码</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="change_pwd_title">修改密码</string>
    <string name="register_title">注册</string>
    <string name="register_phone_number">手机号码</string>
    <string name="register_phone_number_null">请输入手机号码</string>
    <string name="register_btn_next">下一步</string>
    <string name="register_sub_title">请输入手机号码<xliff:g id="step_count">%1$s</xliff:g>收到的校验码</string>
    <string name="register_check_code">校验码</string>
    <string name="register_btn_re_code"><xliff:g id="step_count">%1$d</xliff:g>秒后重发</string>
    <string name="register_btn_re_code_done">获取验证码</string>
    <string name="edit_code_null">请输入验证码</string>
    <string name="register_inviter">邀请码</string>
    <string name="register_password">密码</string>
    <string name="register_password_null">请输入密码</string>
    <string name="register_inviter_null">请输入邀请码</string>
    <string name="change_password_old">  旧密码</string>
    <string name="change_password_new">  新密码</string>
    <string name="change_pwd_old_null">请输入旧密码</string>
    <string name="change_pwd_new_null">请输入新密码</string>
    <string name="setting_message">消息通知</string>
    <string name="setting_changpwd">修改密码</string>
    <string name="setting_help">帮助</string>
    <string name="setting_telephone">尚尚热线</string>
    <string name="setting_telephone_number">4000011253</string>
    <string name="setting_service">尚尚服务</string>
    <string name="setting_exit">退出</string>
    <string name="information_comment">评论</string>
    <string name="information_comment_hit">请输入评论内容</string>
    <string name="information_comment_publish">发表</string>
    <string name="jh_mysch">我的门派</string>
    <string name="jh_mypost">我的帖子</string>
    <string name="jh_fenlei">江湖分类</string>
    <string name="jh_menpai_name">门派名字</string>
    <string name="jh_menpai_tag">门派标签</string>
    <string name="jh_menpai_logo">门派个性图标</string>
    <string name="jh_menpai_name_hint">门派名字（8字以内）</string>
    <string name="rab_xueya">血压</string>
    <string name="rab_xuetang">血糖</string>
    <string name="rab_stepcount">计步器</string>
    <string name="start_time">开始日期</string>
    <string name="end_time">结束日期</string>
    <string name="blood_text1">您尚未设置血压计</string>
    <string name="blood_date">选择日期</string>
    <string name="blood_title1">测量时间</string>
    <string name="blood_title2">舒张压</string>
    <string name="blood_title3">收缩压</string>
    <string name="blood_title4">心率</string>
    <string name="blood_top1">列表</string>
    <string name="blood_top2">曲线图</string>
    <string name="blood_top3">统计</string>
    <string name="blood_type1">爸爸</string>
    <string name="blood_type2">妈妈</string>
    <string name="find">查询</string>
</resources>