<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text_date1"
            style="@style/text_12"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_pop_selector"
            android:padding="5dp"
            android:text="@string/blood_date" />
        <TextView
            android:id="@+id/tv_date1"
            style="@style/text_12"
            android:layout_marginLeft="12dp"
            android:background="@color/black_fa"
            android:padding="5dp"
            android:text="@string/start_time" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/text_date2"
            style="@style/text_12"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_pop_selector"
            android:padding="5dp"
            android:text="@string/blood_date" />

        <TextView
            android:id="@+id/tv_date2"
            style="@style/text_12"
            android:layout_marginRight="12dp"
            android:background="@color/black_fa"
            android:padding="5dp"
            android:text="@string/end_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <Spinner
            android:id="@+id/blood_spin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:spinnerMode="dialog" />
        <RadioGroup
            android:id="@+id/test_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/test_radio1"
                android:layout_width="36dp"
                android:layout_height="22dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/radio_sex"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/blood_type1"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/test_radio2"
                android:layout_width="36dp"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_sex"
                android:button="@null"
                android:gravity="center"
                android:text="@string/blood_type2"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:checked="false" />
        </RadioGroup>
        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/btn_find"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_round_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/find"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:padding="5dp" >

        <TextView
            android:id="@+id/chart_title1"
            style="@style/activity_top_text"
            android:layout_weight="1"
            android:textColor="@color/blue_9f"
            android:text="@string/blood_top1" />
        <TextView
            android:id="@+id/chart_title2"
            style="@style/activity_top_text"
            android:layout_weight="1"
            android:text="@string/blood_top2"
            android:textColor="@color/black_9c" />

        <TextView
            android:id="@+id/chart_title3"
            style="@style/activity_top_text"
            android:layout_weight="1"
            android:text="@string/blood_top3"
            android:textColor="@color/black_9c" />
    </LinearLayout>

    <include layout="@layout/line_long" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_tongji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <include layout="@layout/layout_tongji" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_list_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <include layout="@layout/list_chart" />
        </LinearLayout>

        <TextView
            android:id="@+id/chart_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="45dp"
            android:text="@string/blood_text1"
            android:textColor="#363636"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>