<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#9c9c9c" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:paddingTop="3sp"
        android:background="#fafafa"
        android:gravity="center_vertical" >
        <TextView
            android:id="@+id/nums_pinglun"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/information_comment"
           />
        <EditText
            android:id="@+id/edit_pinglun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="128"
            android:background="@drawable/text_input"
            android:maxLength="128"
            android:hint="@string/information_comment_hit"
            android:inputType="textMultiLine"
            android:textSize="12sp" >
            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/send_pinglun"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_right_selector"
            android:gravity="center"
            android:text="@string/information_comment_publish"
            android:textColor="#646464"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>