<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/shop_title">

        <Button
            android:id="@+id/titlebar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/margin_space"
            android:background="@drawable/title_back_selector"
            android:visibility="gone" />

        <TextView
            android:id="@+id/right_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:text="设备"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/bottom_tools4"
            style="@style/textStyle.Big.black"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tab_item_healthy"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_blood"
        style="@style/textStyle.Big.black"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/rab_xueya" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8px"
        android:background="@drawable/line_01" />

    <TextView
        android:id="@+id/tv_sugar"
        style="@style/textStyle.Big.black"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/rab_xuetang" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8px"
        android:background="@drawable/line_01" />

    <TextView
        android:id="@+id/tv_stepcounter"
        style="@style/textStyle.Big.black"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/rab_stepcount" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8px"
        android:background="@drawable/line_01" />
</LinearLayout>